--- a/src/App.css
+++ b/src/App.css
@@ -3,27 +3,9 @@
   
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+
 
 .App-link {
   color: #61dafb;
@@ -49,7 +31,8 @@
   flex: 1
 }
 .iframe{
-  flex: 7
+  flex: 7;
+  position: relative;
 }
 .secondPop{
   display: flex;
@@ -60,3 +43,13 @@ td{
   text-align: left;
   padding: 8px;
 }
+.resultsort{
+  
+  position: absolute;
+  right: 267px;
+  top: -60px;
+  display: flex;
+  
+ 
+}
+
